// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complex example 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "file": "post/[post]/index.vue",
        "name": "post--post--index-vue",
        "path": "",
      },
      Object {
        "children": Array [
          Object {
            "file": "post/[post]/[comment]/index.vue",
            "name": "post--post---comment--index-vue",
            "path": "",
          },
          Object {
            "file": "post/[post]/[comment]/likes.vue",
            "name": "post--post---comment--likes-vue",
            "path": "likes",
          },
          Object {
            "file": "post/[post]/[comment]/replies.vue",
            "name": "post--post---comment--replies-vue",
            "path": "replies",
          },
        ],
        "file": "post/[post]/[comment].vue",
        "name": "post--post---comment--vue",
        "path": ":comment",
      },
    ],
    "file": "post/[post].vue",
    "name": "post--post--vue",
    "path": "/post/:post",
  },
  Object {
    "children": Array [
      Object {
        "file": "explore/tweets.vue",
        "name": "explore-tweets-vue",
        "path": "tweets",
      },
    ],
    "file": "explore.vue",
    "name": "explore-vue",
    "path": "/explore",
  },
  Object {
    "children": Array [
      Object {
        "file": "[user]/index.vue",
        "name": "-user--index-vue",
        "path": "",
      },
      Object {
        "file": "[user]/profile.vue",
        "name": "-user--profile-vue",
        "path": "profile",
      },
    ],
    "file": "[user].vue",
    "name": "-user--vue",
    "path": "/:user",
  },
]
`;

exports[`directory 1`] = `
Array [
  Object {
    "file": "index.vue",
    "name": "index-vue",
    "path": "/",
  },
  Object {
    "file": "foo/bar.vue",
    "name": "foo-bar-vue",
    "path": "/foo/bar",
  },
  Object {
    "file": "foo/baz.vue",
    "name": "foo-baz-vue",
    "path": "/foo/baz",
  },
]
`;

exports[`simple 1`] = `
Array [
  Object {
    "file": "index.vue",
    "name": "index-vue",
    "path": "/",
  },
  Object {
    "file": "about.vue",
    "name": "about-vue",
    "path": "/about",
  },
]
`;
